updated dependency and update api